add review controller

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
       <td> <%= review.rating %></td>
     </tr>
     <% end %>
-    
+  <%= link_to "SWAG SOME REVIEW FOOL", new_company_product_review_path(@product.company, @product) %>
 
 
   </tbody>
