--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<p><%= form_for [@product, @review] do |f| %></p>
+<p><%= form_for [@company, @product, @review] do |f| %></p>
 
 <p><%= f.label :title %>
 <%= f.text_field :title %></br></p>
